--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -15,3 +15,9 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7.0.4-alpine
+    container_name: redis7
+    restart: always
+    ports:
+      - '6379:6379'
