--- a/surelink-go/surelink-go/app.env.sample
+++ b/surelink-go/surelink-go/app.env.sample
@@ -1,4 +1,4 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:secret@localhost:5432/fd-db?sslmode=disable
-FD_AUTH_SERVER_ADDRESS=0.0.0.0:9000
-FD_EVENT_LISTENER_SERVER_ADDRESS=0.0.0.0:9001
+DB_SOURCE=postgresql://root:secret@localhost:5432/surelink-db?sslmode=disable
+SERVER_ADDRESS=0.0.0.0:9000
+REDIS_URL=localhost:6379
