--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -20,4 +20,9 @@ services:
     container_name: redis7
     restart: always
     ports:
-      - '6379:6379'
+      - "6379:6379"
+
+networks:
+  default:
+    external:
+      name: nginx-proxy
