remove ports from docker compose of go server

--- a/docker-compose-go.yaml
+++ b/docker-compose-go.yaml
@@ -11,8 +11,8 @@ services:
       VIRTUAL_PORT: 9000
       LETSENCRYPT_HOST: api.surel.ink
       LETSENCRYPT_EMAIL: shuhan.mirza@gmail.com
-    ports:
-       - "9000:9000"
+    # ports:
+    #    - "9000:9000"
 networks:
   default:
     external:
