--- a/surelink-vue/package.json
+++ b/surelink-vue/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
