start template for controller service route

--- a/surelink-go/sqlc.yaml
+++ b/surelink-go/sqlc.yaml
@@ -1,7 +1,7 @@
 version: "1"
 packages:
   - name: "db"
-    path: "surelink-go/sqlc/"
+    path: "surelink-go/infrastructure/sqlc/"
     queries: "db/query/"
     schema: "db/migration/"
     engine: "postgresql"
