--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -17,7 +17,7 @@ services:
 
   redis.surel.ink:
     image: redis:7.0.4-alpine
-    container_name: redis7
+    container_name: redis.surel.ink
     restart: always
     ports:
        - "6379:6379"
