--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -2,9 +2,9 @@ version: '3.1'
 
 services:
 
-  db:
+  postgres.surel.ink:
     image: postgres:14-alpine
-    container_name: postgres14
+    container_name: postgres.surel.ink
     restart: always
     volumes:
       - ./DockerVolumes/postgres-data:/var/lib/postgresql/data
@@ -12,8 +12,8 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: surelink-db
-    # ports:
-    #   - "5432:5432"
+    ports:
+      - "5432:5432"
 
   redis.surel.ink:
     image: redis:7.0.4-alpine
