--- a/surelink-go/surelink-go/app.env
+++ b/surelink-go/surelink-go/app.env
@@ -1,4 +1,4 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:secret@postgres14:5432/surelink-db?sslmode=disable
+DB_SOURCE=postgresql://root:secret@postgres.surel.ink:5432/surelink-db?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:9000
 REDIS_URL=redis.surel.ink:6379
