--- a/surelink-vue/package.json
+++ b/surelink-vue/package.json
@@ -10,6 +10,7 @@
     "@babel/polyfill": "^7.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "axios": "^1.3.6",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "bulma": "^0.9.4",
