--- a/surelink-vue/package.json
+++ b/surelink-vue/package.json
@@ -20,7 +20,9 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
     "vue-js-counter": "^1.0.3",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-toast-notification": "^3.1.1",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
