--- a/surelink-vue/package.json
+++ b/surelink-vue/package.json
@@ -20,6 +20,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
     "vue-js-counter": "^1.0.3",
+    "vue-loaders": "^4.1.4",
     "vue-router": "^3.5.1",
     "vue-toastification": "^1.7.14"
   },
