--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-name: remote ssh command
-on: [push]
+name: deploy server
+on: 
+  push: 
+    branches:
+      - main
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -13,4 +15,9 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY}}
         port: ${{ secrets.SSH_PORT }}
-        script: whoami
+        script: | 
+          cd ~/surelink
+          git pull --rebase
+          docker-compose -f docker-compose-go.yaml up --build -d
+          docker-compose -f docker-compose-vue.yaml up --build -d
+          
